raffia/tests/error/comment/line.snap
---
source: raffia/tests/error.rs
---
error: CSS rule is expected
  ┌─ line.css:1:1
  │
1 │ // comment
  │ ^


